alternc-mailman (2.1) stable; urgency=low

  * ADD the ability to choose the URL of the web pages for mailman lists

 -- Benjamin Sonntag <benjamin@alternc.org>  Wed, 19 Oct 2011 17:12:00 +0200

alternc-mailman (2.0) stable; urgency=low

  * fix patch for mailman-virtual for 2.1.13 (squeeze version)
  * fix the mm_cfg error (missing %s) and postinst (typos)

 -- Benjamin Sonntag <benjamin@alternc.org>  Sat, 04 Jun 2011 18:18:18 +0200

alternc-mailman (1.9) stable; urgency=low

  * stylesheet from alternc's standard
  * independent of register_globals
  * confirm password when creating list
  * listname check depending on the multi-domain patch status
  * reverted the 'list url' behavior to http://fqdn-of-the-panel/cgi-bin/mailman
	see http://benjamin.sonntag.fr/download/mailman-discussion.mp3 for a complete audio note about it... (french)

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Wed, 2 Jun 2010 20:08:00 +0200

alternc-mailman (1.8) stable; urgency=low

  * reformatting of the class comments in the code (all comments are in english now)
  * changing desktop color to blue :)
  * misc security sanitizing patchs from alternc 0.9.10pre
  * added the ability to change a list's password from the panel (in case you forgot it)

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Sat, 14 Jun 2009 10:43:00 +0200

alternc-mailman (1.7) stable; urgency=low

  [ Patrick Hétu ]
  * fix list URLs by adding a new variable (#1131)

 -- Antoine Beaupré <antoine@koumbit.org>  Thu, 08 May 2008 16:05:56 -0400

alternc-mailman (1.6) stable; urgency=low

  [ Antoine ]
  * fix list creation for patched VirtualMailman installations (#1106)
  * start applying those patches automatically on installation
  * this also fixes list creation for non-patched installations (#1105)
  * 0.9.8 compatibility (#1119)
  * make sure all mailing lists names are lowercase (#1103)
  * allow dashes in list names
  * add portuguese translation
  * adapt to standards 3.7.3 (copyright file fix)